--- a/app/src/main/res/layout/dice_selection.xml
+++ b/app/src/main/res/layout/dice_selection.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="match_parent"
@@ -308,4 +308,4 @@
         android:id="@+id/rollButton"
         android:text="Roll"/>
 
-</RelativeLayout>
+</merge>
