--- a/app/src/main/res/layout/dice_selection.xml
+++ b/app/src/main/res/layout/dice_selection.xml
@@ -21,7 +21,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:id="@+id/d4RemoveDieImageView"
-        android:src="@android:drawable/arrow_down_float"
+        android:src="@drawable/ic_remove_circle_outline_black_24dp"
         android:layout_below="@id/d4DieTypeImageView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -44,7 +44,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:id="@+id/d4AddDieImageView"
-        android:src="@android:drawable/arrow_up_float"
+        android:src="@drawable/ic_add_circle_outline_black_24dp"
         android:layout_below="@id/d4DieTypeImageView"
         android:layout_toRightOf="@id/d4DieCountEditText"
         android:layout_toEndOf="@id/d4DieCountEditText"/>
@@ -61,7 +61,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:id="@+id/d6RemoveDieImageView"
-        android:src="@android:drawable/arrow_down_float"
+        android:src="@drawable/ic_remove_circle_outline_black_24dp"
         android:layout_below="@id/d6DieTypeImageView"
         android:layout_alignLeft="@id/d6DieTypeImageView"/>
 
@@ -82,7 +82,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:id="@+id/d6AddDieImageView"
-        android:src="@android:drawable/arrow_up_float"
+        android:src="@drawable/ic_add_circle_outline_black_24dp"
         android:layout_below="@id/d6DieTypeImageView"
         android:layout_toRightOf="@id/d6DieCountEditText"
         android:layout_toEndOf="@id/d6DieCountEditText"/>
@@ -101,7 +101,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:id="@+id/d8RemoveDieImageView"
-        android:src="@android:drawable/arrow_down_float"
+        android:src="@drawable/ic_remove_circle_outline_black_24dp"
         android:layout_below="@id/d8DieTypeImageView"
         android:layout_alignLeft="@id/d8DieTypeImageView"/>
 
@@ -122,7 +122,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:id="@+id/d8AddDieImageView"
-        android:src="@android:drawable/arrow_up_float"
+        android:src="@drawable/ic_add_circle_outline_black_24dp"
         android:layout_below="@id/d8DieTypeImageView"
         android:layout_toRightOf="@id/d8DieCountEditText"
         android:layout_toEndOf="@id/d8DieCountEditText"
@@ -142,7 +142,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:id="@+id/d10RemoveDieImageView"
-        android:src="@android:drawable/arrow_down_float"
+        android:src="@drawable/ic_remove_circle_outline_black_24dp"
         android:layout_below="@id/d10DieTypeImageView"
         android:layout_alignLeft="@id/d10DieTypeImageView"
         android:layout_marginLeft="3dp"/>
@@ -164,7 +164,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:id="@+id/d10AddDieImageView"
-        android:src="@android:drawable/arrow_up_float"
+        android:src="@drawable/ic_add_circle_outline_black_24dp"
         android:layout_below="@id/d10DieTypeImageView"
         android:layout_toRightOf="@id/d10DieCountEditText"
         android:layout_toEndOf="@id/d10DieCountEditText"/>
@@ -182,7 +182,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:id="@+id/d12RemoveDieImageView"
-        android:src="@android:drawable/arrow_down_float"
+        android:src="@drawable/ic_remove_circle_outline_black_24dp"
         android:layout_below="@id/d12DieTypeImageView"
         android:layout_alignLeft="@id/d12DieTypeImageView"/>
 
@@ -203,7 +203,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:id="@+id/d12AddDieImageView"
-        android:src="@android:drawable/arrow_up_float"
+        android:src="@drawable/ic_add_circle_outline_black_24dp"
         android:layout_below="@id/d12DieTypeImageView"
         android:layout_toRightOf="@id/d12DieCountEditText"
         android:layout_toEndOf="@id/d12DieCountEditText"/>
@@ -222,7 +222,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:id="@+id/d20RemoveDieImageView"
-        android:src="@android:drawable/arrow_down_float"
+        android:src="@drawable/ic_remove_circle_outline_black_24dp"
         android:layout_below="@id/d20DieTypeImageView"
         android:layout_alignLeft="@id/d20DieTypeImageView"/>
 
@@ -243,7 +243,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:id="@+id/d20AddDieImageView"
-        android:src="@android:drawable/arrow_up_float"
+        android:src="@drawable/ic_add_circle_outline_black_24dp"
         android:layout_below="@id/d20DieTypeImageView"
         android:layout_toRightOf="@id/d20DieCountEditText"
         android:layout_toEndOf="@id/d20DieCountEditText"
@@ -262,7 +262,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:id="@+id/d100RemoveDieImageView"
-        android:src="@android:drawable/arrow_down_float"
+        android:src="@drawable/ic_remove_circle_outline_black_24dp"
         android:layout_below="@id/d100DieTypeImageView"
         android:layout_alignLeft="@id/d100DieTypeImageView"/>
 
@@ -283,7 +283,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:id="@+id/d100AddDieImageView"
-        android:src="@android:drawable/arrow_up_float"
+        android:src="@drawable/ic_add_circle_outline_black_24dp"
         android:layout_below="@id/d100DieTypeImageView"
         android:layout_toRightOf="@id/d100DieCountEditText"
         android:layout_toEndOf="@id/d100DieCountEditText"/>
